--- a/LDS_STOCK/views/menu.xml
+++ b/LDS_STOCK/views/menu.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <odoo>
-    <record id="action_contacts" model="ir.actions.act_window">
-        <field name="name">Contacts</field>
+    <record id="action_lds_logistic_letter" model="ir.actions.act_window">
+        <field name="name">Logistic Letter</field>
         <field name="type">ir.actions.act_window</field>
-        <field name="res_model">res.partner</field>
+        <field name="res_model">lds.logistic.letter</field>
         <field name="view_type">form</field>
         <field name="view_mode">kanban,tree,form</field>
         <field name="search_view_id" ref="base.view_res_partner_filter"/>
@@ -17,23 +17,23 @@
           </p>
         </field>
     </record>
-    <record id="action_contacts_view_kanban" model="ir.actions.act_window.view">
+    <record id="action_lds_logistic_letter_view_kanban" model="ir.actions.act_window.view">
         <field name="sequence" eval="0"/>
         <field name="view_mode">kanban</field>
         <field name="view_id" ref="base.res_partner_kanban_view"/>
-        <field name="act_window_id" ref="action_contacts"/>
+        <field name="act_window_id" ref="action_lds_logistic_letter"/>
     </record>
-    <record id="action_contacts_view_tree" model="ir.actions.act_window.view">
+    <record id="action_lds_logistic_letter_view_tree" model="ir.actions.act_window.view">
         <field name="sequence" eval="1"/>
         <field name="view_mode">tree</field>
         <field name="view_id" ref="base.view_partner_tree"/>
-        <field name="act_window_id" ref="action_contacts"/>
+        <field name="act_window_id" ref="action_lds_logistic_letter"/>
     </record>
-    <record id="action_contacts_view_form" model="ir.actions.act_window.view">
+    <record id="action_lds_logistic_letter_view_form" model="ir.actions.act_window.view">
         <field name="sequence" eval="2"/>
         <field name="view_mode">form</field>
         <field name="view_id" ref="base.view_partner_form"/>
-        <field name="act_window_id" ref="action_contacts"/>
+        <field name="act_window_id" ref="action_lds_logistic_letter"/>
     </record>
     <!-- Top menu item -->
     <menuitem name="LDS"
@@ -44,7 +44,7 @@
 
     <menuitem id="projects_menu_lds"
     name="Projects"
-    action="action_contacts"
+    action="action_lds_logistic_letter"
     parent="menu_lds"
     sequence="2"/>
     
