--- a/LDS_STOCK/views/views.xml
+++ b/LDS_STOCK/views/views.xml
@@ -38,6 +38,7 @@
                             <field name="product_location_ids">
                             <tree editable="bottom">
                                 <field name="product_id"/>
+                                <field name="partner_id"/>
                                 <field name="description"/>
                                 <field name="location_id"/>
                                 <field name="lds_reserved_quantity"/>
