--- a/LDS_STOCK/views/views.xml
+++ b/LDS_STOCK/views/views.xml
@@ -130,6 +130,46 @@
           </p>
         </field>
     </record>
+    <record id="product_template_action_product" model="ir.actions.act_window">
+        <field name="name">Products</field>
+        <field name="type">ir.actions.act_window</field>
+        <field name="res_model">product.template</field>
+        <field name="view_mode">kanban,tree,form</field>
+        <field name="view_type">form</field>
+        <field name="context">{"search_default_consumable": 1, 'default_type': 'product'}</field>
+        <field name="help" type="html">
+            <p class="oe_view_nocontent_create">
+                Click to define a new product.
+            </p>
+        </field>
+    </record>
+    <record id="action_location_form" model="ir.actions.act_window">
+        <field name="name">Locations</field>
+        <field name="res_model">stock.location</field>
+        <field name="type">ir.actions.act_window</field>
+        <field name="view_type">form</field>
+        <field name="inherit_id" ref="stock.view_location_tree2"/>
+        <field name="inherit_id" ref="stock.view_location_search"/>
+        <field name="context">{'search_default_in_location':1}</field>
+        <field name="help" type="html">
+          <p class="oe_view_nocontent_create">
+            Click to add a location.
+          </p><p>
+            Define your locations to reflect your warehouse structure and
+            organization. Odoo is able to manage physical locations
+            (warehouses, shelves, bin, etc), partner locations (customers,
+            vendors) and virtual locations which are the counterpart of
+            the stock operations like the manufacturing orders
+            consumptions, inventories, etc.
+          </p><p>
+            Every stock operation in Odoo moves the products from one
+            location to another one.  For instance, if you receive products
+            from a vendor, Odoo will move products from the Vendor
+            location to the Stock location. Each report can be performed on
+            physical, partner or virtual locations.
+          </p>
+        </field>
+    </record>
     <!-- Top menu item -->
     <menuitem name="LDS"
     id="menu_lds"
@@ -142,5 +182,17 @@
     action="action_lds_logistic_letter"
     parent="menu_lds"
     sequence="2"/>
+
+     <menuitem id="products_menu_lds"
+    name="Products"
+    action="product_template_action_product"
+    parent="menu_lds"
+    sequence="4"/>
+
+    <menuitem id="location_menu_lds"
+    name="Location"
+    action="action_location_form"
+    parent="menu_lds"
+    sequence="6"/>
     
 </odoo>
